--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1319,8 +1319,12 @@ header {
       .comment-right {
         position: relative;
         font-size: 15px;
+        textarea {
+          height: 5em;
+          padding: 0 .3em;
+        }
         div {
-          margin-bottom: 2.3em;
+          margin-bottom: 2.5em;
         }
         .btn {
           position: absolute;
@@ -1333,6 +1337,28 @@ header {
           bottom: .1em;
           color: #8b8b8b;
         }
+        .fa-edit {
+          cursor: pointer;
+          position: absolute;
+          right: 200px;
+          bottom: .3em;
+        }
+        .delete {
+          position: absolute;
+          bottom: .1em;
+          right: 140px;
+          .far {
+            font-weight: 900;
+          }
+        }
+        .comment-cancel-button {
+          position: absolute;
+          left: 20px;
+        }
+        .comment-update-button {
+          position: absolute;
+          left: 120px;
+        }
       }
     }
   }
@@ -1341,13 +1367,12 @@ header {
       margin: 1.3em 0 .8em;
     }
     textarea {
-      font-size: 14px;
+      font-size: 15px;
       background-color: white;
       display: block;
       box-sizing: border-box;
       width: 100%;
-      outline: none;
-      margin:0;
+      margin: 0;
       border: 1px solid #dbdbdb;
       padding: .2em .5em;
       border-radius: 2px;
