--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -49,7 +49,7 @@
 <div class="comment-wrapper row">
   <h2 class="col-12">－コメント一覧－</h2>
   <div id="comments_area" class="col-12">
-    <%= render partial: 'comments/index', locals: { comments: @comments } %>
+    <%= render partial: 'comments/index', locals: { comments: @comments, post: @post } %>
   </div>
   <hr>
   <div class="comment-form col-12">
