--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -17,6 +17,7 @@
   <% end %>
 
   <hr class="hr_01" />
-  <p>※ 再送信を行ってもメールが届かない場合、迷惑メールとして別フォルダに振り分けられている場合があります。<br />
+  <p class="p-mb">※ 再送信を行ってもメールが届かない場合、迷惑メールとして別フォルダに振り分けられている場合があります。<br />
   ご確認ください。</p>
+  <%= link_to "戻る", :back, class: "btn btn-dark" %>
 </div>
