--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -16,6 +16,7 @@
     </div>
   <% end %>
 
-  <p>※ パスワード再設定URLを送信します。<br />
+  <p class="p-mb">※ パスワード再設定URLを送信します。<br />
   ご登録いただいているメールアドレスを入力し、送信ボタンをクリックしてください。</p>
+  <%= link_to "戻る", :back, class: "btn btn-dark" %>
 </div>
