--- a/app/views/posts/liked_users.html.erb
+++ b/app/views/posts/liked_users.html.erb
@@ -1,26 +1,34 @@
-<% @current_page = 'liked_users'   %>
+<% @current_page = 'liked_users' %>
 
 <div class="show-liked-users row">
-  <div class="post-field col-3">
-    <% if @post.user.image.present? %>
-          <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb200) %></p>
-        <% else %>
-          <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
-        <% end %>
-    <p class="user-name"><%= link_to @post.user.nickname, @post.user %></p>
-    <h5><%= @post.title %></h5>
-    <p class="author">著) <%= @post.author %></p>
+  <div class="post-field col-12 row">
     <% if @post.post_image.present? %>
-      <p class="post-image"><%= image_tag @post.post_image_url %></p>
+      <p class="post-image col-3"><%= image_tag @post.post_image_url %></p>
     <% else %>
-      <p class="post-image default-post-image"><%= image_tag 'no_image200.png' %></p>
+      <p class="post-image default-post-image col-3"><%= image_tag 'no_image200.png' %></p>
     <% end %>
+    <div class="post-info col-9">
+      <h5><%= @post.title %></h5>
+      <p class="author"><%= @post.author %></p>
+      <p class="publisher"><%= @post.publisher %></p>
+      <div class="user-field">
+        <p class="user-name"><%= link_to @post.user.nickname, @post.user %></p>
+        <%= link_to user_path(@post.user) do %>
+          <% if @post.user.image.present? %>
+            <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb200) %></p>
+          <% else %>
+            <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
-  <div class="liked-users-field col-9">
-    <h4>いいねしたユーザ <%= @post.liked_users.count %> 人</h4>
+  <div class="liked-users-field col-12">
+    <h1><span>|| </span>いいねしたユーザ <%= @post.liked_users.count %> 人</h1>
     <ul class = "users user-show-users row" >
-  <%= render partial: 'users/users' %>
-</ul>
-<%= paginate @users %>
+      <%= render partial: 'users/users' %>
+    </ul>
+    <%= paginate @users %>
+    <%= link_to "戻る", :back, class: "btn btn-dark" %>
   </div>
 </div>
