--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <%= favicon_link_tag('favicon.ico') %>
     <title><%= document_title %></title>
 
     <%= csrf_meta_tags %>
@@ -22,7 +22,11 @@
       <div id="container" class="container">
         <%= yield %>
       </div>
-      <%= debug(params) if Rails.env.development? %>
+      <%
+=begin%>
+ <%= debug(params) if Rails.env.development? %> 
+<%
+=end%>
       <%= render "shared/footer" %>
     </div>
   </body>
