--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,32 +1,33 @@
 <% @title = @post.title %>
 
-<h1><span>|| </span>投稿詳細</h1>
-
 <div class="post-wrapper row">
+  <h1><span>|| </span>投稿詳細</h1>
   <% if @post.user == current_user %>
     <p class="edit col-12"><%= link_to "編集する", edit_post_path , class: "btn btn-info" %></p>
   <% else %>
     <div class="user-field col-12">
-        <p><%= link_to @post.user.nickname, @post.user %></p>
-        <%= link_to user_path(@post.user) do %>
-          <% if @post.user.image.present? %>
-            <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb200) %></p>
-          <% else %>
-            <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
-          <% end %>
+      <p><%= link_to @post.user.nickname, @post.user %></p>
+      <%= link_to user_path(@post.user) do %>
+        <% if @post.user.image.present? %>
+          <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb200) %></p>
+        <% else %>
+          <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
         <% end %>
-      </div>
+      <% end %>
+    </div>
   <% end %>
-  <div class="post-title col-md-11 col-10">
+  <div class="post-title col-12">
     <p class="title-top">タイトル</p>
     <h2><%= @post.title %></h2>
   </div>
-  <div class="post-show-like col-md-1 col-2">
-    <div class="like normal" id="show_like_<%= @post.id %>">
-      <%= render 'likes/like', post: @post %>
+  <div class="title-bottom col-12">
+    <p class="liked_users"><%= link_to "いいねしたユーザ", liked_users_post_path(@post) %></p>
+    <div class="post-show-like">
+      <div class="like normal" id="show_like_<%= @post.id %>">
+        <%= render 'likes/like', post: @post %>
+      </div>
     </div>
   </div>
-  <p class="liked_users col-12"><%= link_to "いいねしたユーザ", liked_users_post_path(@post) %></p>
   <% if @post.post_image.present? %>
     <p class="post-image col-4"><%= image_tag @post.post_image_url %></p>
   <% else %>
@@ -47,16 +48,17 @@
 </div>
 
 <div class="comment-wrapper row">
-  <h2 class="col-12">－コメント一覧－</h2>
+  <h2 class="col-12"><i class="far fa-comment-alt"></i>コメント一覧</h2>
   <div id="comments_area" class="col-12">
     <%= render partial: 'comments/index', locals: { comments: @comments, post: @post } %>
   </div>
   <hr>
   <div class="comment-form col-12">
-    <h2>コメントを書く</h2>
+    <h2><i class="fas fa-pen"></i>コメントを書く</h2>
     <div id="error_explanation"></div>
     <%= render partial: 'comments/form', locals: { comment: @comment, post: @post } %>
   </div>
+  <%= link_to "戻る", :back, class: "btn btn-dark" %>
 </div>
 
 
